--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,1 +1,4 @@
-<p>product-list works!</p>
+<h1>{{ title }}</h1>
+<div class="product-container">
+  <app-product-item *ngFor="let product of products" [product]="product" (addToCart)="addToCart($event)"></app-product-item>
+</div>
