--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -5,9 +5,9 @@
       <div class="cart-item-details">
         <p>{{ product.name }}</p>
         <p>${{ product.price }}</p>
-        <input type="number" name="quantity" [(ngModel)]="product.quantity">
+        <input type="number" name="quantity" [(ngModel)]="product.quantity" (change)="updateCart(product)">
       </div>
     </div>
-    <h3>Total: ${{ total }}</h3>
+    <h3>Total: ${{ total.toFixed(2) }}</h3>
   </div>
 </div>
