--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,4 +10,20 @@
     </div>
     <h3>Total: ${{ total.toFixed(2) }}</h3>
   </div>
+  <div class="form-margin">
+    <form (ngSubmit)="onSubmit()">
+      <label>Full Name</label>
+      <br>
+      <input type="text" placeholder="Enter your full name..." (ngModel)="name">
+      <br>
+      <label>Address</label>
+      <br>
+      <input type="text" placeholder="Enter your address...">
+      <br>
+      <label>Credit Card Number</label>
+      <br>
+      <input type="text" placeholder="Credit card number...">
+      <input type="submit" value="submit">
+    </form>
+  </div>
 </div>
