Fix name and total in confirmation comp

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -14,7 +14,7 @@
     <form (ngSubmit)="onSubmit()">
       <label>Full Name</label>
       <br>
-      <input type="text" placeholder="Enter your full name..." (ngModel)="name">
+      <input name="name" type="text" placeholder="Enter your full name..." [(ngModel)]="name">
       <br>
       <label>Address</label>
       <br>
