--- a/src/app/components/confirmation/confirmation.component.html
+++ b/src/app/components/confirmation/confirmation.component.html
@@ -7,7 +7,7 @@
       <p>Thank you, {{ name }}!</p>
     </div>
     <div class="confirmation-item">
-      <p>Your ${{ total}} order is confirmed!</p>
+      <p>Your ${{ total.toFixed(2) }} order is confirmed!</p>
     </div>
     <div class="confirmation-item">
       <p>Please allow 1 - 3 business day[s] for shipping</p>
