--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,6 +1,8 @@
 <form (ngSubmit)="onSubmit()">
   <div class="product-container">
-    <img class="product-image" src="{{ product.url }}" alt="{{ product.name }}">
+    <a routerLink="/{{ product.id }}">
+      <img class="product-image" src="{{ product.url }}" alt="{{ product.name }}">
+    </a>
     <p>{{ product.name }}</p>
     <p>${{ product.price}}</p>
     <select name="quantity" [(ngModel)]="selectedQuantity">
