--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,7 @@
-<h1>{{ title }}</h1>
-<div class="product-container">
-  <app-product-item *ngFor="let product of products" [product]="product" (addToCart)="addToCart($event)"></app-product-item>
+<div fxLayout fxLayoutAlign="center center">
+  <div class="product-index">
+    <div class="product-container" *ngFor="let product of products">
+      <app-product-item [product]="product" (addToCart)="addToCart($event)"></app-product-item>
+    </div>
+  </div>
 </div>
