--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -15,6 +15,10 @@
   justify-content: flex-start;
 }
 
+.product-name {
+  font-weight: bold;
+}
+
 .select-input {
   width: 108px; 
   margin-bottom: 8px;
