--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,29 +1,34 @@
-<div class="cart-container">
-  <div class="cart-panel">
+<div class="cart-container" fxLayout="row" fxLayoutGap="100">
+  <div class="cart-panel" fxLayout="column">
     <div class="cart-item" *ngFor="let product of cartProducts">
       <img src="{{ product.url }}" alt="{{ product.name }}">
       <div class="cart-item-details">
         <p>{{ product.name }}</p>
         <p>${{ product.price }}</p>
-        <input type="number" name="quantity" [(ngModel)]="product.quantity" (change)="updateCart(product)">
+        <input class="select-input" type="number" name="quantity" [(ngModel)]="product.quantity" (change)="updateCart(product)">
       </div>
     </div>
     <h3>Total: ${{ total.toFixed(2) }}</h3>
   </div>
   <div class="form-margin">
     <form (ngSubmit)="onSubmit()">
-      <label>Full Name</label>
-      <br>
-      <input name="name" type="text" placeholder="Enter your full name..." [(ngModel)]="name">
-      <br>
-      <label>Address</label>
-      <br>
-      <input type="text" placeholder="Enter your address...">
-      <br>
-      <label>Credit Card Number</label>
-      <br>
-      <input type="text" placeholder="Credit card number...">
-      <input type="submit" value="submit">
+      <div fxLayout="column" fxLayoutGap="15">
+        <div fxLayout="column" fxLayoutGap="5">
+          <label>Full Name</label>
+          <input name="name" type="text" placeholder="Enter your full name..." [(ngModel)]="name">
+        </div>
+        <div fxLayout="column" fxLayoutGap="5">
+          <label>Address</label>
+          <input type="text" placeholder="Enter your address...">
+        </div>
+        <div fxLayout="column" fxLayoutGap="5">
+          <label>Credit Card Number</label>
+          <input type="text" placeholder="Credit card number...">
+        </div>
+        <div>
+          <input class="btn btn-primary" type="submit" value="submit">
+        </div>
+      </div>
     </form>
   </div>
 </div>
