--- a/src/app/components/product-item-detail/product-item-detail.component.css
+++ b/src/app/components/product-item-detail/product-item-detail.component.css
@@ -23,3 +23,12 @@ img {
 .back-link {
   margin-top: 8px;
 }
+
+.product-name {
+  font-size: larger;
+  font-weight: bold;
+}
+
+.submit-button {
+  margin-top: 20px;
+}
