--- a/src/app/components/product-item-detail/product-item-detail.component.html
+++ b/src/app/components/product-item-detail/product-item-detail.component.html
@@ -1,15 +1,21 @@
-<div class="detail-container">
-  <img src="{{ product.url }}" alt="{{ product.name }}">
-  <div class="detail-item">
-    <h1>{{ product.name }}</h1>
-    <p>{{ product.price }}</p>
-    <p>{{ product.description }}</p>
+<div class="detail-container" fxLayout="row">
+  <div>
+    <img src="{{ product.url }}" alt="{{ product.name }}">
+  </div>
+  <div class="detail-item" fxLayout="column" fxLayoutGap="10">
+    <div class="product-name">{{ product.name }}</div>
+    <div>{{ product.price }}</div>
+    <div>{{ product.description }}</div>
     <form>
-      <select class="select-input" name="quantity">
-        <option></option>
-      </select>
-      <input type="submit" value="Add to cart">
+      <div>
+        <select class="select-input" name="quantity">
+          <option></option>
+        </select>
+      </div>
+      <div>
+        <input class="btn btn-primary submit-button" type="submit" value="Add to cart">
+      </div>
     </form>
-    <a class="back-link">Return to product list</a>
+    <a class="back-link" routerLink="/">Return to product list</a>
   </div>
 </div>
