--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -2,10 +2,15 @@
   <div class="cart-panel" fxLayout="column">
     <div class="cart-item" *ngFor="let product of cartProducts">
       <img src="{{ product.url }}" alt="{{ product.name }}">
-      <div class="cart-item-details">
-        <p>{{ product.name }}</p>
-        <p>${{ product.price }}</p>
-        <input class="select-input" type="number" name="quantity" [(ngModel)]="product.quantity" (change)="updateCart(product)">
+      <div class="cart-item-details" fxLayoutGap="20">
+        <div>{{ product.name }}</div>
+        <div>${{ product.price }}</div>
+        <div>
+          <input class="select-input" type="number" name="quantity" [(ngModel)]="product.quantity" (change)="updateCart(product)">
+        </div>
+        <div>
+          <button class="btn btn-primary" (click)="removeFromCart(product.id)">Remove</button>
+        </div>
       </div>
     </div>
     <h3>Total: ${{ total.toFixed(2) }}</h3>
